o Update CIB3-gene.pdf and rename it -> CIB3-transcripts.pdf o Also rename ZNF813-gene.pdf -> ZNF813-transcripts.pdf
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74638 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -104,7 +104,7 @@ of all known transcript variants of Human gene CIB3 (Entrez ID 117286).
 
 \begin{figure}[tbp]
   \begin{center}
-  \includegraphics[width=4in,height=1.5in,angle=90,origin=lB]{CIB3-gene.pdf}
+  \includegraphics[width=4in,height=1.5in,angle=90,origin=lB]{CIB3-transcripts.pdf}
   \hskip 0.5in
   \raisebox{-0.6in}{\includegraphics[width=2in,height=5.5in]{CIB3-sg.pdf}}
   \end{center}
@@ -130,7 +130,7 @@ An example of such splicing graph is shown in Figure \ref{img:ZNF813}.
 
 \begin{figure}[tbp]
   \begin{center}
-  \includegraphics[width=4in,height=1.5in,angle=-90,origin=rB]{ZNF813-gene.pdf}
+  \includegraphics[width=4in,height=1.5in,angle=-90,origin=rB]{ZNF813-transcripts.pdf}
   \hskip 0.5in
   \raisebox{-0.6in}{\includegraphics[width=3in,height=5.5in]{ZNF813-sg.pdf}}
   \end{center}
