Add internal utility commonStrand().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74862 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -476,6 +476,22 @@ bfs <- BamFileList(fls)
 
 \subsection{Counting reads per edges}
 
+<<>>=
+flag0 <- scanBamFlag(isNotPrimaryRead=FALSE,
+                     isNotPassingQualityControls=FALSE,
+                     isDuplicate=FALSE)
+param0 <- ScanBamParam(flag=flag0)
+gal1 <- readGappedAlignments(fls[1], use.names=TRUE, param=param0)
+grl1 <- grglist(gal1, order.as.in.query=TRUE)
+## This takes about 1 hour!
+sg <- assignReads(sg, grl1, sample.name=names(fls[1]))
+@
+
+<<>>=
+unlist(sg)
+intronsByTranscript(sg)
+@
+
 The reads get counted based on the edge model created above.
 Thereby adjacent elements of an edge are summarized to one
 range before the counting is done. If an read overlaps two 
